--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-konva": "^18.2.10",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "universal-cookie": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
