--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "konva": "^9.2.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-konva": "^18.2.10",
     "react-scripts": "5.0.1",
@@ -44,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-color": "^3.0.7"
   }
 }
